# yes-this-is-another-kanban-board

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  skills-lock.json
.claude/agents/: commit-preparer.md  documentalist.md
.claude/commands/: update-docs.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ccb38650d84_initial.py  245a24abea14_add_due_date_and_assignee_to_cards.py
backend/app/: database.py  main.py
backend/app/models/: __init__.py  board.py  card.py  column.py
backend/app/routers/: boards.py  cards.py  columns.py
backend/app/schemas/: __init__.py  board.py  card.py  column.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ThemeToggle.tsx
frontend/src/components/Board/: BoardList.tsx  BoardView.tsx
frontend/src/components/Card/: AddCardForm.tsx  CardItem.tsx
frontend/src/components/Column/: AddColumnForm.tsx  ColumnItem.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/store/: boardStore.ts
prompts/: 01-initial-prompt.md  02-change-board-layout  02-change-board-layout.md  03-task-new-feature.md
tests/backend/: conftest.py  test_boards.py  test_cards.py  test_columns.py
tests/e2e/: kanban.spec.ts  package.json  playwright.config.ts
